Add deploy.yml file

--- a/deployment/deploy.yml
+++ b/deployment/deploy.yml
@@ -4,33 +4,15 @@
 - hosts: all
 
   roles:
-    - common
+  - common
 
-# Configure and deploy database servers.
-- hosts: dbservers
-
-  roles:
-    - db
-
-# Configure and deploy the web servers. Note that we include two roles
-# here, the 'base-apache' role which simply sets up Apache, and 'web'
-# which includes our example web application.
+# Configure and deploy the web servers.
 
 - hosts: webservers
 
   roles:
-    - base-apache
-    - web
+  - web
 
-# Configure and deploy the load balancer(s).
-- hosts: lbservers
+- name:
 
-  roles:
-    - haproxy
-
-# Configure and deploy the Nagios monitoring node(s).
-- hosts: monitoring
-
-  roles:
-    - base-apache
-    - nagios
+- tasks:
